--- a/thesis/chapter5.tex
+++ b/thesis/chapter5.tex
@@ -10,7 +10,7 @@
 \includegraphics[width=60mm,keepaspectratio]{figures/diagram.png}
 \end{center}
 \vspace{-15pt}
-\caption{High level overview of the interpreter}
+\caption{High level architectural overview}
 \end{wrapfigure}
 
 The original goal of this thesis was to create a usable parser module in JavaScript that is as easy to use as to understand. Since my background in formal languages was limited, I aimed to use an algorithm that I could completely understand. This is the reason behind my first solution --- I tried to solve the problem using only intuition, to see what can be done without previous knowledge of the subject.
