--- a/thesis/project.tex
+++ b/thesis/project.tex
@@ -3,13 +3,6 @@
 %--------------------------------------------------------------------------------------
 \begin{center}
 \large
-\textbf{FELADATKIÍRÁS}\\
-\end{center}
-
-\cleardoublepage
-
-\begin{center}
-\large
 \textbf{Translation of the original work description}\\
 \end{center}
 
@@ -18,7 +11,7 @@
 \textbf{Modular Interpreter Written in JavaScript}\\
 \end{center}
 
-To learn programming, there are some basic tools everyone needs - a compiler and some text editor or an IDE. To acquire and use these can sometimes be non-trivial, especially for the younger generations. Most of the learning material is on the Internet, but to solve the exercises one needs to use the aforementioned programs installed on their computer. By eliminating this extra step and putting the programming environment closer to the materials the life of new pupils can be made easier. The aim of this thesis is to create a modular interpreter in JavaScript, using which anyone can run any kind of code inside the browser (and since it is modular, it can be easily extended with new languages). The role of the interpreter is to build an Abstract Syntax Tree (AST) from the given source code, and to process the tree to run the equivalent JavaScript code. Using this interpreter anyone could easily build educational websites that can focus on teaching programming, since the learning materials and the environment will be in the same place - in the browser.
+To learn programming, there are some basic tools everyone needs --- a compiler and some text editor, sometimes even a complete IDE. To acquire and use these can sometimes be non-trivial, especially for the younger generations. Most of the learning material is on the Internet, but to solve the exercises, one needs to use the aforementioned programs installed on their computer. By eliminating this extra step and putting the programming environment closer to the materials, the life of new pupils can be made easier. The aim of this thesis is to create a modular interpreter in JavaScript, which anyone can use to run any kind of code inside the browser (and since it is modular, it can be easily extended with new languages). The role of the interpreter is to build an Abstract Syntax Tree (AST) from the given source code, and to process the tree to run the equivalent JavaScript code. Using this interpreter anyone could easily build educational websites that can focus on teaching programming, since the learning materials and the environment will be in the same place - in the browser.
 The requirements for this thesis are the following:
 \begin{itemize}
 \item Create the core part of the interpreter
