--- a/thesis/acknowledgement.tex
+++ b/thesis/acknowledgement.tex
@@ -2,4 +2,6 @@
 \chapter*{Acknowledgements}\addcontentsline{toc}{chapter}{Acknowledgement}
 %----------------------------------------------------------------------------
 
-I would like to thank my friend Blumenschein Volfram for helping me by checking my work for grammatical errors. I would also like to thank Stephen Jackson for his tutorial, which helped me to understand the basic idea of LALR parser construction algorithm - he tried to make the subject easy to understand, and I think he succeeded.
+I would like to thank my friend Blumenschein Volfram for helping me in checking my work for grammatical errors. 
+
+I would also like to thank Stephen Jackson for his tutorial, which helped me to understand the basic idea of LALR parser construction algorithm - he tried to make the subject easy to understand, and I think he succeeded.
