--- a/thesis/chapter1.tex
+++ b/thesis/chapter1.tex
@@ -1,7 +1,7 @@
 %----------------------------------------------------------------------------
-\chapter{Coding conventions}\label{sect:Coding}
+\chapter{Coding conventions}
 %----------------------------------------------------------------------------
-While JavaScript is a modern language, there are some parts of it that evolved quite slowly compared to other languages. The most prominent part is classes (although object-orientation is a core part of the language), which have been properly introduced into the standard with ECMAScript version 6. There are shortcomings of this implementation, although it improved on the previous version greatly. Before ECMAScript 6, a programmer who wanted to create an object or a class in JavaScript had to use a weird syntax that relied on anonymous classes and factory functions, since the language did not really have a class keyword. This allowed object oriented development, but only to a certain extent. With ECMAScript 6, a proper class keyword was introduced, alongside with keywords like extend and constructor, which made proper object-oriented code easier to write and read.
+While JavaScript is a modern language, there are some parts of it that evolved quite slowly compared to other languages. The most prominent part is the declaration of classes (although object-orientation is a core part of the language), which have been properly introduced into the standard with ECMAScript version 6. Although it improved on the previous version greatly, there are shortcomings of this implementation. Before ECMAScript 6, a programmer who wanted to create an object or a class in JavaScript had to use a weird syntax that relied on anonymous classes and factory functions, since the language did not really have a class keyword. This allowed object oriented development, but only to a certain extent. With ECMAScript 6, a proper class keyword was introduced, alongside with keywords like extend and constructor, which made proper object-oriented code easier to write and read.
 %----------------------------------------------------------------------------
 \section{About JavaScript}
 %----------------------------------------------------------------------------
@@ -9,7 +9,7 @@ JavaScript is a fairly modern interpreted language with weak types --- which mak
 
 The language was developed in 1995 Brendan Eich \footnote{Brendan Eich's website \url{https://brendaneich.com/}} in only ten days while he worked for Netscape --- one of most popular early web browsers. The fact that it was developed in such short time is remarkable, but it means that there are some oddities in the language. A great presentation \footnote{Talk on JavaScript oddities \url{https://www.destroyallsoftware.com/talks/wat}} about these parts of the language was given by Gary Bernhardt in 2012. Some of the most interesting odd behaviours originate from the language being weakly typed --- during comparison of values and while using operators, the interpreter tries to cast the values into other types to run the operation it was asked successfully. This ends up creating weird things, such as adding an empty array and an empty object together, which is a valid operation in JavaScript. In the case of the empty array being the first operand (\texttt{[] + \{\}}), the empty array is interpreted as an empty string, and so the empty object is cast into a string, which yields \texttt{[object Object]} as the result. Surprisingly flipping the operands \texttt{\{\} + []} yields \texttt{0} as a result, making the plus operand not commutative in this case.
 
-While weak types can be problematic, they can also be a helpful took during development, since a lot of operations are allowed this way that would require explicit casting in other languages --- but the developer has to keep these weird rules in mind when doing comparison and such operations.
+While weak types can be problematic, they can also be a helpful tool during development, since a lot of operations are allowed this way that would require explicit casting in other languages --- but the developer has to keep these weird rules in mind when doing comparison and such operations.
 
 Nowadays JavaScript is nicely standardized, with the standard being continually improved upon. This standard is called ECMAScript \footnote{ECMAScript 6 specification \url{http://www.ecma-international.org/ecma-262/6.0/ECMA-262.pdf}} on which work began in 1997. Since then many versions were released, of which this thesis uses the 6th version, ECMAScript 2015.
 %----------------------------------------------------------------------------
@@ -38,4 +38,4 @@ One of the ways of dealing with the absence of private members is to follow a na
 %----------------------------------------------------------------------------
 \section{Node.js modules}
 %----------------------------------------------------------------------------
-I developed the solution by splitting parts into their own Node.js modules, which allowed me to easily check my solution without even starting a browser. Node.js is a relatively new technology that provides an JavaScript interpreter --- the same interpreter that Google Chrome uses, the V8 JavaScript engine \footnote{V8 JavaScript engine \url{https://chromium.googlesource.com/v8/v8.git}} --- in a binary form with interfaces for lower level tasks --- such as networking --- readily available. This allows programmers to create server applications in JavaScript, which means a website can be developed with the frontend and the backend written in the same language --- sometimes even sharing code. Sadly the Node.js module syntax is not something that browsers can deal with by themselves, but this problem can be eliminated by using the tools described in the end of the introduction chapter.
+I developed the solution by splitting parts into their own Node.js modules, which allowed me to easily check my solution without even starting a browser. Node.js is a relatively new technology that provides a JavaScript interpreter --- the same interpreter that Google Chrome uses, the V8 JavaScript engine \footnote{V8 JavaScript engine \url{https://chromium.googlesource.com/v8/v8.git}} --- in a binary form with interfaces for lower level tasks --- such as networking --- readily available. This allows programmers to create server applications in JavaScript, which means a website can be developed with the frontend and the backend written in the same language --- sometimes even sharing code. Sadly the Node.js module syntax is not something that browsers can deal with by themselves, but this problem can be eliminated by using the tools described at the end of the introduction chapter.
