--- a/thesis/abstract.tex
+++ b/thesis/abstract.tex
@@ -5,9 +5,9 @@
 
 A programozás megtanulása akadályokkal teli folyamat tud lenni a kezdetekben. A szakdolgozatomban erre a problémára kívánok megoldást javasolni egy JavaScipt alapú moduláris értelmezõ elkészítésével, ami bármilyen programozási nyelvet képes értelmezni --- amennyi-ben elkészül a megfelelõ modul hozzá --- és átfordítani JavaScript kóddá.
 
-A megoldás egy reguláris kifejezés és állapotgép alapú lexikális analizátor modulból --- neve Lexer ---, és egy szintaktikai elemzõ modulból áll, aminek neve Parser és az LALR elemzõ algoritmust implementálja, majd ennek segítségével dolgozza fel a bemenetét a BNF-ben megadott nyelvtan szerint.
+A megoldás egy reguláris kifejezés és állapotgép alapú lexikális analizátor modulból --- neve Lexer ---, és egy szintaktikai elemzõ modulból áll, aminek neve Parser és az LALR elemzõ algoritmust implementálja, majd ennek segítségével dolgozza fel a bemenetét a BNF-ben megadott nyelvtan szerint. Az így létrejött AST ezek után a megfelelõen megírt nyelvi modullal feldolgozható és közvetlenül JavaScript kódra fordítható.
 
-A szakdolgozatomban leírom a megoldás menetét és elmagyarázom a használt algoritmusok mûködését --- és hogy miért az adott algoritmus mellett döntöttem. Emellett kitérek a használt technológia sajátosságaira hogy a JavaScript mélyebb ismerete nélkül is könnyen értelmezhetõ legyen a dolgozatom.
+A szakdolgozatomban leírom a megoldás menetét és elmagyarázom a használt algoritmusok mûködését --- és hogy miért az adott algoritmus mellett döntöttem. Emellett kitérek a használt technológia sajátosságaira hogy a JavaScript és a formális nyelvtanok mélyebb ismerete nélkül is könnyen értelmezhetõ legyen a dolgozatom. Ennek a megoldásnak a felhasználásával könnyen lehet böngészõben mûködõ, interaktív programozási tananyagokat fejleszteni.
 
 \vfill
 
@@ -16,11 +16,11 @@ A szakdolgozatomban leírom a megoldás menetét és elmagyarázom a használt algorit
 %----------------------------------------------------------------------------
 \chapter*{Abstract}\addcontentsline{toc}{chapter}{Abstract}
 
-Learning how to program can be a problematic experience for new students. In my thesis, I propose a solution to the problematic first experiences by creating a modular interpreter that can interpret any kind of programming language --- if a module is created for it --- and translate that code to JavaScript.
+Learning how to program can be a problematic experience for new students. In my thesis, I propose a solution to the problematic first experiences by creating a modular interpreter written in JavaScript that can interpret any kind of programming language --- if a module is created for it --- and translate that code to JavaScript.
 
-The solution consists of a regular expressions and state machine based lexical analyser module called Lexer, and a Parser module that implements the LALR parsing algorithm to parse grammars defined in BNF.
+The solution consists of a regular expressions and state machine based lexical analyser module called Lexer, and a Parser module that implements the LALR parsing algorithm to parse grammars defined in BNF. The resulting AST then can be interpreted with the proper language module, which can directly run the equivalent JavaScript code.
 
-In my thesis I describe the solution and explain the used algorithms, and the choice behind them. I also give a brief explanation of the used technologies to make the solution easy to understand even for those who do not know much about JavaScript.
+In my thesis I describe the solution and explain the used algorithms, and the choice behind them. I also give a brief explanation of the used technologies to make the solution easy to understand even for those who do not know much about JavaScript or formal grammars. Using this solution it is easy to build interactive websites for programming language courses.
 
 \vfill
 
