--- a/thesis/chapter3.tex
+++ b/thesis/chapter3.tex
@@ -7,7 +7,7 @@ The input of the parser is the grammar and the tokens, while the output is a hie
 %----------------------------------------------------------------------------
 \section{Describing the grammar}
 %----------------------------------------------------------------------------
-There are well established ways to describe grammars --- one of which is a notation called Backus?Naur form, or BNF (named after John Backus --- who proposed the notation --- and Peter Naur --- who edited the first document that used it, a 1963 report on Algol60 \cite{backus1963revised}). This notation is widely used, and provides an easy way to describe context-free grammars. Context-free grammars are a subset of formal grammars which do not use context to determine which rule to be used in a given situation.
+There are well established ways to describe grammars --- one of which is a notation called Backus-Naur form, or BNF (named after John Backus --- who proposed the notation --- and Peter Naur --- who edited the first document that used it, a 1963 report on Algol60 \cite{backus1963revised}). This notation is widely used, and provides an easy way to describe context-free grammars. Context-free grammars are a subset of formal grammars which do not use context to determine which rule to be used in a given situation.
 
 A grammar consists of basic production rules which match one non-terminal to zero or several terminals and non-terminals, for example:
 \begin{grammar}
