--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -42,4 +42,4 @@ Other solutions to running code on the web include cloud based solutions, which 
 
 During the implementation, speed was not the main focus, since this is not a tool built for performance but rather one that is built to be available everywhere --- but I did try to not be wasteful with the resources. To achieve modern, well readable source code and portability, I used the ECMAScript 6 standard, which is essentially a JavaScript standard that most modern browsers can interpret -- but only the newer versions. I developed my solution in Node.js modules, which can then be converted into code that works on older browsers using Babel \footnote{Babel \url{https://github.com/babel/babel}} and Browserify \footnote{Browserify \url{http://browserify.org/}}, which are Node.js modules themselves to convert to older standards and to bundle modules into one source file for browsers respectively.
 
-Chapter 1 will outline the basic coding conventions I followed during development. In Chapter 2, I will describe the implemented lexical analyser, and it's inner workings. In Chapter 3, I will write about the parser module, and the implemented parsing algorithm. In Chapter 4, I will describe the two example modules I have created - a math expression parser, and a simple Logo subset interpreter. In chapter 5 I will give a summary of the chapters before and some conclusions while in chapter 6 I will write about problems and possible improvements for the future.
+Chapter 1 will outline the basic coding conventions I followed during development. In Chapter 2, I will describe the implemented lexical analyser, and it's inner workings. In Chapter 3, I will write about the parser module, and the implemented parsing algorithm. In Chapter 4, I will describe the two example modules I have created - a math expression parser, and a simple Logo subset interpreter. In Chapter 5 I will give a summary of the chapters before and some conclusions while in Chapter 6 I will write about problems and possible improvements for the future.
